<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuideMeBack</string>
    <string name="title_activity_guide_me_back_main">GuideMeBack</string>
    <string name="title_activity_debug">Debug</string>
    <string name="title_activity_locations">Locations</string>
    <string name="title_activity_edit_saved_location">Edit saved location</string>
    <string name="title_activity_my_setup">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_save">Save</string>
    <string name="menu_quick_save_location">Save location</string>
    <string name="menu_quick_save_home">Home</string>
    <string name="menu_quick_save_car">Car</string>
    <string name="menu_quick_save_hotel">Hotel</string>
    <string name="menu_stored_locations">Stored locations</string>
    <string name="menu_debug">Debug</string>
    <string name="menu_clipboard">Copy to clipboard</string>
    <string name="button_Ok">OK</string>
    <string name="button_Save">Save</string>
    <string name="button_Cancel">Cancel</string>
    <string name="emptyString"></string>
    <string name="speedLabel">Speed</string>
    <string name="distanceLabel">Distance</string>
    <string name="speedunits">Km/h</string>
    <string name="keepLevel">Keep device level</string>
    <string name="arrowDescription">Arrow description</string>
    <string name="debug_currentPosition">Current position:</string>
    <string name="debug_destinationPosition">Destination position:</string>
    <string name="debug_distanceLabelText">Distance to destination:</string>
    <string name="debug_quickSaveButtonLabel">Quick Save</string>
    <string name="debug_loadSavedPositionButtonLabel">Load position</string>
    <string name="debug_speedLabel">Speed:</string>
    <string name="set">Set</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="no_data">--</string>
    <string name="quick_save_home">Quick save home</string>
    <string name="quick_save_car">Quick save car</string>
    <string name="quick_save_hotel">Quick save hotel</string>
    <string name="pos_set"> set.</string>
    <string name="pos_saved"> saved.</string>
    <string name="label_lat">Lat: </string>
    <string name="label_long">Long: </string>
    <string name="label_KeepScreenOn">Keep screen on</string>
    <string name="all_locations_deleted">All locations deleted</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="editLocationDescription">Description</string>
    <string name="editLatitudeDescription">Latitude</string>
    <string name="editLongitudeDescription">Longitude</string>
    <string name="version_info">Version: 1.0.a</string> 
	<string name="developer_info">Developer : Jan Van Vlaenderen</string>

</resources>