<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_save"
        android:orderInCategory="110"
        android:title="@string/menu_save">
        <menu>
            <item
                android:id="@+id/menu_quick_save_location"
                android:title="@string/menu_quick_save_location"/>
            <item
                android:id="@+id/menu_quick_save_home"
                android:title="@string/menu_quick_save_home"/>
            <item
                android:id="@+id/menu_quick_save_car"
                android:title="@string/menu_quick_save_car"/>
            <item
                android:id="@+id/menu_quick_save_hotel"
                android:title="@string/menu_quick_save_hotel"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_stored_locations"
        android:orderInCategory="120"
        android:title="@string/menu_stored_locations"/>
    <item
        android:id="@+id/menu_clipboard"
        android:orderInCategory="130"
        android:title="@string/menu_clipboard"/>
    <item
        android:id="@+id/menu_debug"
        android:orderInCategory="140"
        android:title="@string/menu_debug" android:visible="false"/>

</menu>