<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_savedLocation_set"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/set"/>

    <item
        android:id="@+id/menu_savedLocation_edit"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/edit"/>

    <item
        android:id="@+id/menu_savedLocation_delete"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/delete"/>

    <item
        android:id="@+id/menu_savedLocation_deleteAll"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/delete_all"/>

</menu>