<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@color/LightGrey"
    android:orientation="vertical"
    tools:context=".MySetupActivity" >

    <CheckBox
        android:id="@+id/setupCheckBoxKeepScreenOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_KeepScreenOn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/versionInfoSpace"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="bottom"
            android:lines="2"
            android:text="@string/emptyString" />

        <TextView
            android:id="@+id/versionInfo"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="bottom"
            android:lines="1"
            android:text="@string/version_info" />

        <TextView
            android:id="@+id/developerInfo"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="bottom"
            android:lines="1"
            android:text="@string/developer_info" />
    </LinearLayout>

</LinearLayout>